--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,6 @@
+// Uses the BEM naming convention
+// Documentation: https://getbem.com/
+
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import 'colors';
 
@@ -5,4 +8,13 @@
     margin: 0px;
     padding: 0px;
     font-family: 'IBM Plex Snas', sans-serif;
+}
+
+.wrapper {
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
+
+    display: grid;
+    grid-template-rows: minmax(150px, max-content) auto minmax(150px, max-content);
 }
