--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,8 +1,7 @@
 @import 'colors';
 
 .header__wrapper__full {
-    background-color: red;
-    height: 200px;
+    min-height: 200px;
 
     display: flex;
     flex-direction: column;
@@ -11,6 +10,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding-top: 20px;
+        padding-bottom: 20px;
 
         .logo__link__full {
             .logo__image__full {
@@ -21,14 +22,24 @@
 
     .header__navbar__full {
         height: 50px;
-
-        background-color: green;
+        background-color: $white;
 
         display: flex;
         flex-direction: row;
 
         justify-content: center;
         align-items: center;
+        border-style: solid;
+
+        border-top-width: 1px;
+        border-top-color: $gray;
+
+        border-bottom-width: 1px;
+        border-bottom-color: $gray;
+
+        border-left: none;
+        border-right: none;
+        
 
         .navbar__button__section {
             margin-left: 20px;
@@ -39,7 +50,7 @@
                 color: $black;
 
                 &:hover {
-                    color: $gray;
+                    color: $dark-gray;
                 }
             }
 
