created mobile version

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,4 +17,8 @@
 
     display: grid;
     grid-template-rows: minmax(150px, max-content) auto minmax(150px, max-content);
+
+    @media all and (max-width: 800px) {
+        grid-template-rows: minmax(100px, max-content) auto minmax(150px, max-content);
+    }
 }
