--- a/styles/HeaderMobile.module.scss
+++ b/styles/HeaderMobile.module.scss
@@ -2,6 +2,22 @@
 
 .header__wrapper__mobile {
     min-height: 100px;
+
+    @media all and (max-width: 550px) {
+        min-height: 90px;
+        height: 90px;
+    }
+
+    @media all and (max-width: 450px) {
+        min-height: 70px;
+        height: 70px;
+    }
+
+    @media all and (max-width: 350px) {
+        min-height: 50px;
+        height: 50px;
+    }
+
     background-color: $white;
 
     display: flex;
@@ -33,6 +49,18 @@
 
             .logo__image__mobile{
                 height: 50px;
+
+                @media all and (max-width: 550px) {
+                    height: 40px;
+                }
+
+                @media all and (max-width: 450px) {
+                    height: 30px;
+                }
+
+                @media all and (max-width: 350px) {
+                    height: 20px;
+                }
             }
         }
 
@@ -58,6 +86,18 @@
         .navbar__image__search {
             width: 40px;
             height: 40px; 
+
+            @media all and (max-width: 550px) {
+                height: 40px;
+            }
+
+            @media all and (max-width: 450px) {
+                height: 30px;
+            }
+
+            @media all and (max-width: 350px) {
+                height: 20px;
+            }
         }
     }
 
@@ -68,6 +108,18 @@
         .navbar__image__setting {
             width: 40px;
             height: 40px; 
+
+            @media all and (max-width: 550px) {
+                height: 40px;
+            }
+
+            @media all and (max-width: 450px) {
+                height: 30px;
+            }
+
+            @media all and (max-width: 350px) {
+                height: 20px;
+            }
         }
     }
 }
