added borderlines to menu

--- a/styles/HeaderMobile.module.scss
+++ b/styles/HeaderMobile.module.scss
@@ -130,21 +130,33 @@
 .settings__menu__mobile {
     background-color: $white;
     position: fixed;
-    top: 100px;
     width: 100%;
+    top: 102px;
+
     @media all and (max-width: 550px) {
-        top: 90px;
+        top: 92px;
     }
 
     @media all and (max-width: 450px) {
-        top: 70px;
+        top: 72px;
     }
 
     @media all and (max-width: 350px) {
-        top: 50px;
+        top: 52px;
     }
 
-    font-size: 30px;
+    .settings__menu__choice {
+        font-size: 30px;
+
+        border-style: solid;
+
+        border-bottom-width: 1px;
+        border-bottom-color: $gray;
+        
+        border-top: none;
+        border-left: none;
+        border-right: none;
+    }
 }
 
 
@@ -153,19 +165,4 @@
     position: fixed;
     top: 0px;
     width: 100%;
-}
-
-.sticky__for__settings {
-    top: 100px;
-    @media all and (max-width: 550px) {
-        top: 90px;
-    }
-
-    @media all and (max-width: 450px) {
-        top: 70px;
-    }
-
-    @media all and (max-width: 350px) {
-        top: 50px;
-    }
 }
