--- a/styles/HeaderFull.module.scss
+++ b/styles/HeaderFull.module.scss
@@ -68,7 +68,18 @@
 
         .navbar__text__search {
             height: 80%;
-            width: 50%;
+            width: 900px;
+            @media all and (max-width: 1000px) {
+                width: 80%;
+            }
+
+            @media all and (max-width: 450px) {
+                width: 80%;
+            }
+
+            @media all and (max-width: 350px) {
+                width: 80%;
+            }
 
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
@@ -82,6 +93,12 @@
         .navbar__button__search {
             position: absolute;
             right: 20px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $gray;
+                border-radius: 10px;
+            }
         }
     }
 }
