--- a/styles/HeaderMobile.module.scss
+++ b/styles/HeaderMobile.module.scss
@@ -1,7 +1,23 @@
 @import 'colors';
 
+.header__wrapper__holder {
+    height: 100px;
+    @media all and (max-width: 550px) {
+        height: 90px;
+    }
+
+    @media all and (max-width: 450px) {
+        height: 70px;
+    }
+
+    @media all and (max-width: 350px) {
+        height: 50px;
+    }
+}
+
 .header__wrapper__mobile {
     min-height: 100px;
+    height: 100px;
 
     @media all and (max-width: 550px) {
         min-height: 90px;
@@ -46,7 +62,6 @@
         justify-content: center;
 
         .logo__link__mobile {
-
             .logo__image__mobile{
                 height: 50px;
 
@@ -66,11 +81,13 @@
 
 
         .navbar__text__search {
-            height: 90%;
+            height: 95%;
             width: 70%;
-            @media all and (max-width: 350px) {
+
+            @media all and (max-width: 450px) {
                 width: 60%;
             }
+            
 
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
@@ -85,6 +102,7 @@
     .navbar__button__search {
         position: absolute;
         right: 20px;
+        cursor: pointer;
 
         .navbar__image__search {
             width: 40px;
@@ -102,11 +120,17 @@
                 height: 20px;
             }
         }
+
+        &:hover {
+            background-color: $gray;
+            border-radius: 10px;
+        }
     }
 
     .navbar__button__setting {
         position: absolute;
         left: 20px;
+        cursor: pointer;
 
         .navbar__image__setting {
             width: 40px;
@@ -123,6 +147,11 @@
             @media all and (max-width: 350px) {
                 height: 20px;
             }
+        }
+
+        &:hover {
+            background-color: $gray;
+            border-radius: 10px;
         }
     }
 }
@@ -145,17 +174,40 @@
         top: 52px;
     }
 
-    .settings__menu__choice {
-        font-size: 30px;
+    .settings__choices__link {
+        text-decoration: none;
+        color: $black;
 
-        border-style: solid;
+        .settings__menu__choice {
+            font-size: 30px;
+    
+            border-style: solid;
+    
+            border-bottom-width: 1px;
+            border-bottom-color: $gray;
+            
+            border-top: none;
+            border-left: none;
+            border-right: none;
 
-        border-bottom-width: 1px;
-        border-bottom-color: $gray;
-        
-        border-top: none;
-        border-left: none;
-        border-right: none;
+            &:hover {
+                background-color: $gray;
+            }
+    
+            .settings__menu__choices {
+                display: flex;
+                width: 100%;
+                height: 100%;
+                padding-left: 20px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                align-items: center;
+
+                .settings__image__icon {
+                    height: 35px;
+                }
+            }
+        }
     }
 }
 
