--- a/styles/HeaderMobile.module.scss
+++ b/styles/HeaderMobile.module.scss
@@ -19,6 +19,10 @@
     min-height: 100px;
     height: 100px;
 
+    position: fixed;
+    top: 0px;
+    width: 100%;
+
     @media all and (max-width: 550px) {
         min-height: 90px;
         height: 90px;
